3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

protocol/doc/code:
	Changed the way smoothing is done. Switched the smooth 
	command to binary mode, rebuild archetype files, added doc 
	on smoothing, updated protocol file. 
	Changed a the "togglemapextended smoothing" to "togglemapextended
	smooth" to prevent problem of compatibilities with previous cvs
	smoothing releases.
Tchize 2003-07-08

protocol: 
	Added new command to send extended map informations to the
	client. Mainly used for now to send smoothing informations.
	Also commented the modifications in the protocol file ind doc/
lib/Makefiles:
	Changed to install the smooth file too. Needed by smooth code
common/loader.l and loader.c
	completly reworked get_ob_diff to improve speed at mapsave time.
	For now function is interlaced with commented old code. Will clean
	up when code will be proved working. (hope middle of july)
Tchize 2003-07-03

server/apply.c: Fix auto_apply - missing else, causing extra
   treausres to be generated inside of shop tiles.
server/monster.c: Fix npc_call_help to be map tile aware.
MSW 2003-06-18

lib/collect.pl.in: Modify it so that it will collect .trs (treasure) files and
   build a treasures.bld from that as well as the existing treasures file.  In
   this way, treasure information for objects can be put in the arch
   directory.
lib/Makefile.am, Makefile.in: Modified so that it copies over the
   treasures.bld to treasures in the destination directory.  Have
   the collect directive also build the images, so that a double
   make isn't necessary.
lib/treasures.bld: Added file - like the archetypes, this is the pre-
   build treasure file.  Until .trs files are added, this will just