@@ -1,0 +1,8 @@
+The 'peaceful' command will switch you between peaceful and hostile attack modes.
+
+When peaceful is on you will not automatically attack other player when bumping into them and will do reduced damage against other players if you do attack them (friendly fire).
+Having peaceful mode on only lowers damage against other players, it has no effect on damage done to monsters or other NPCs, so it is generally advisable to remain in peaceful mode unless you are looking for trouble.
+It is still entirely possible to kill other players when in peaceful mode so you should still be careful when interacting with other players.
+Hostile mode (peaceful off) will enable melee combat when bumping into other players and does normal damage for other attacks as well.
+
+Damage done by area effect attacks like cone spells, explosive detonations, fireballs, poisons, cloud or swarm attacks, runes or disease are not modified by peaceful/hostile mode.
